almost complete all work

--- a/views/admin/addBanner.ejs
+++ b/views/admin/addBanner.ejs
@@ -30,7 +30,7 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="category">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
+              <i class="bi bi-tags"></i>
             </div>
             <span class="nav-link-text ms-1">Categories</span>
           </a>
@@ -38,7 +38,8 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="customer">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">receipt_long</i>
+              <i class="bi bi-people-fill"></i>
+
             </div>
             <span class="nav-link-text ms-1">Customers</span>
           </a>
@@ -46,7 +47,8 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="product">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">view_in_ar</i>
+              <i class="bi bi-bag"></i>
+
             </div>
             <span class="nav-link-text ms-1">Products</span>
           </a>
@@ -54,7 +56,8 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="userOrders">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
+              <i class="bi bi-cart-fill"></i>
+
             </div>
             <span class="nav-link-text ms-1">Orders</span>
           </a>
@@ -62,7 +65,7 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="couponManagement">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
+              <i class="bi bi-percent"></i>
             </div>
             <span class="nav-link-text ms-1">Coupons</span>
           </a>
@@ -70,7 +73,7 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="offer">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
+              <i class="bi bi-percent"></i>
             </div>
             <span class="nav-link-text ms-1">Offers</span>
           </a>
@@ -78,7 +81,8 @@
         <li class="nav-item">
             <a class="nav-link text-white active bg-gradient-primary" href="banner">
               <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-                <i class="material-icons opacity-10">notifications</i>
+                <i class="bi bi-card-image"></i>
+
               </div>
               <span class="nav-link-text ms-1">Banners</span>
             </a>
