--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -375,7 +375,7 @@
       currency: "INR",
       name: "M LIVE Pvt.Ltd", //your business name
       description: "Test Transaction",
-      image: "/user/images/icons/",
+      image: "/static/userAssets/images/icons/logo black inter.png",
       order_id: order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
       handler: function (response) {
         verifyPayment(response, order);
@@ -390,7 +390,7 @@
         address: "Razorpay Corporate Office",
       },
       theme: {
-        color: "#c96",
+        color: "#3399cc",
       },
     };
 
