--- a/views/users/mainLayout/mainFooter.ejs
+++ b/views/users/mainLayout/mainFooter.ejs
@@ -251,6 +251,8 @@
 <!--===============================================================================================-->
 	<script src="/static/userAssets/js/main.js"></script>
 	<script src="/static/userAssets/script.js"></script>
+	<script src="/static/userAssets/css/styles.css"></script>
+
 
 
 <!-- ==================================================================================checkOut======================================================== -->
@@ -264,6 +266,7 @@
 	 <script src="/static/userAssets/another/js/owl.carousel.min.js"></script>
 	 <!-- Main JS File -->
 	 <script src="/static/userAssets/another/js/main.js"></script>
+
 
 
 
