--- a/views/users/wallet.ejs
+++ b/views/users/wallet.ejs
@@ -119,7 +119,7 @@
                 "currency": "INR",
                 "name": "M LIVE",
                 "description": "Test Transaction",
-                "image": "/assets/logo-images/",
+                "image": "/static/userAssets/images/icons/logo black inter.png/",
                 "order_id": order.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
                 "handler": function (response) {
                     verifyPayment(response, order)
