--- a/public/userAssets/css/styles.css
+++ b/public/userAssets/css/styles.css
@@ -1,5 +1,8 @@
 body {
     background-color: #f8f9fa;
+    
+      /* overflow-y: hidden; */
+    
   }
 
   .order-icon {
@@ -180,3 +183,21 @@ body {
   }
   }
 
+
+
+  /* dataTable cssss */
+
+  .page-link {
+    font-size: 7px!important;
+  }
+  .dataTables_info{
+    font-size: 12px;
+    margin-left: 14px;
+  }
+  .dataTables_filter label {
+    margin-right: 20px;
+  }
+  .dataTables_length{
+    margin-left: 20px;
+  }
+ 
