--- a/views/admin/addOffer.ejs
+++ b/views/admin/addOffer.ejs
@@ -13,6 +13,7 @@
           <a class="nav-link text-white" href="home">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">dashboard</i>
+
             </div>
             <span class="nav-link-text ms-1">Dashboard</span>
           </a>
@@ -20,7 +21,8 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="category">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
+              <i class="bi bi-tags"></i>
+
             </div>
             <span class="nav-link-text ms-1">Categories</span>
           </a>
@@ -28,7 +30,8 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="customer">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">receipt_long</i>
+              <i class="bi bi-people-fill"></i>
+
             </div>
             <span class="nav-link-text ms-1">Customers</span>
           </a>
@@ -36,7 +39,8 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="product">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">view_in_ar</i>
+              <i class="bi bi-bag"></i>
+
             </div>
             <span class="nav-link-text ms-1">Products</span>
           </a>
@@ -44,7 +48,7 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="userOrders">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
+              <i class="bi bi-cart-fill"></i>
             </div>
             <span class="nav-link-text ms-1">Orders</span>
           </a>
@@ -52,7 +56,7 @@
         <li class="nav-item">
           <a class="nav-link text-white" href="couponManagement">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
+              <i class="bi bi-percent"></i>
             </div>
             <span class="nav-link-text ms-1">Coupons</span>
           </a>
