--- a/views/admin/layouts/adminFooter.ejs
+++ b/views/admin/layouts/adminFooter.ejs
@@ -27,6 +27,8 @@
 
 <script src="/static/adminAssets/js/productValidation.js" ></script>
 <script src="/static/adminAssets/js/offerValidation.js" ></script>
+<script src="/static/adminAssets/css/styles.css"></script>
+
 
 
 
