--- a/views/admin/layouts/adminMainFooter.ejs
+++ b/views/admin/layouts/adminMainFooter.ejs
@@ -12,7 +12,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-
+<script src="/static/adminAssets/css/styles.css"></script>  
 
 
   
