--- a/views/admin/layouts/adminSideBar.ejs
+++ b/views/admin/layouts/adminSideBar.ejs
@@ -20,7 +20,7 @@
         <li class="nav-item">
           <a class="nav-link text-white active bg-gradient-primary" href="category">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">table_view</i>
+              <i class="bi bi-tags"></i>
             </div>
             <span class="nav-link-text ms-1">Categories</span>
           </a>
@@ -28,7 +28,7 @@
         <li class="nav-item">
           <a class="nav-link text-white   " href="customer">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">receipt_long</i>
+              <i class="bi bi-people-fill"></i>
             </div>
             <span class="nav-link-text ms-1">Customers</span>
           </a>
@@ -36,7 +36,7 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="Product">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">view_in_ar</i>
+              <i class="bi bi-bag"></i>
             </div>
             <span class="nav-link-text ms-1">Products</span>
           </a>
@@ -44,7 +44,7 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="userOrders">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">format_textdirection_r_to_l</i>
+              <i class="bi bi-cart-fill"></i>
             </div>
             <span class="nav-link-text ms-1">Orders</span>
           </a>
@@ -52,7 +52,7 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="../pages/notifications.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">notifications</i>
+              <i class="material-icons opacity-10">person</i>
             </div>
             <span class="nav-link-text ms-1">Coupons</span>
           </a>
@@ -63,7 +63,7 @@
         <li class="nav-item">
           <a class="nav-link text-white " href="../pages/profile.html">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">person</i>
+              <i class="bi bi-card-image"></i>
             </div>
             <span class="nav-link-text ms-1">Banner</span>
           </a>
