--- a/views/users/invoice.ejs
+++ b/views/users/invoice.ejs
@@ -88,7 +88,7 @@
                                                 <td class="text-center"><%=prod.quantity %></td>
                                                 <td class="text-end">₹<%=prod.productId.price %></td>
                                                 <td class="text-end">-₹<%=order.discount%></td>
-                                                <td class="text-end">₹ <%=prod.productId.price %></td>
+                                                <td class="text-end">₹ <%- (prod.productId.price) * (prod.quantity) %></td>
                                             </tr>
                                             <% }) %>
                                                 <tr>
