--- a/views/admin/Customers.ejs
+++ b/views/admin/Customers.ejs
@@ -1,6 +1,17 @@
 
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
+
+<style>
+  .tableBody td{
+
+    background-color: rgb(248, 249, 250)!important;
+    color: black!important;
+
+    
+  }
+</style>
+
 <body class="g-sidenav-show bg-gray-200">
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
     <div class="sidenav-header d-flex justify-content-center">
@@ -103,7 +114,7 @@
                       <th style="text-align: center;">Action</th>
                     </tr>
                   </thead>
-                  <tbody>
+                  <tbody class="tableBody">
                     <% for (var i = 0; i < data.length; i++) { %>
                     <tr>
                       <td style="text-align: center;"><%= data[i].firstName + ' ' + data[i].lastName %></td>
