--- a/views/users/address.ejs
+++ b/views/users/address.ejs
@@ -14,7 +14,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <div class="modal-body">
+        <div class="modal-body container-fluid">
           <form action="" method="post" onsubmit="return validateForm();" class="border rounded p-4" style="width: 530px;">
             <div class="form-group">
               <label for="FullName">Full Name *</label>
