--- a/public/userAssets/css/styles.css
+++ b/public/userAssets/css/styles.css
@@ -201,3 +201,14 @@ body {
     margin-left: 20px;
   }
  
+
+  /* Hide scrollbar for Chrome, Safari, and Opera */
+*::-webkit-scrollbar {
+  display: none;
+ }
+
+ /* Hide scrollbar for IE, Edge, and Firefox */
+ * {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+ }
