--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -3,7 +3,7 @@
 <style>
 
 
-
+/* 
   .form-style {
     width: 550px;
     height: 42px;
@@ -14,7 +14,7 @@
     padding-left: 10px;
 
     
-  }
+  } */
 
   .image-preview-container {
       display: flex;
@@ -66,48 +66,48 @@
     <div class="container-fluid py-4">
       <div class="row">
         <div class="col-12 elemDesign">
-          <div class="card my-4">
+          <div class="card my-4 col-12">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
               <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
                 <h6 class="text-white text-capitalize ps-3">ADD PRODUCT</h6>
               </div>
             </div>
             <div class="card-body px-0 pb-2">
-              <form class="forms-sample" action="/admin/addproduct" method="post" enctype="multipart/form-data" style="background-color: #efefef;" id="productForm">
-
+              <form class="forms-sample p-3" action="/admin/addproduct" method="post" enctype="multipart/form-data" style="background-color: #ffffff;" id="productForm">
+            
                 <div class="row">
-                  <div class="col">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label for="productName" class="font-weight-bold pl-3" style="color: #000000;">Product Name</label>
-                      <input type="text" class="form-control form-style" name="productName" id="productName" placeholder="Name">
+                      <input type="text" class="form-control " name="productName" id="productName" placeholder="Name">
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label for="price" class="font-weight-bold pl-3" style="color: #080000;">Price</label>
-                      <input type="number" class="form-control form-style" id="price" name="price" placeholder="price" >
+                      <input type="number" class="form-control form-style" id="price" name="price" placeholder="price">
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                   </div>
                 </div>
-
+            
                 <div class="row">
-                  <div class="col">
+                  <div class="col-md-6 ">
                     <div class="form-group">
                       <label for="brand" class="font-weight-bold pl-3" style="color: #000000;">Brand</label>
-                      <input type="text" class="form-control form-style" name="brand" id="brand" placeholder="brand" >
+                      <input type="text" class="form-control form-style" name="brand" id="brand" placeholder="brand">
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label class="font-weight-bold pl-3" style="color: #000000;">Category</label>
-                      <select name="category" class="form-control form-style" >
-                        <option   selected>Select Category</option>
+                      <select name="category" class="form-control form-style">
+                        <option selected>Select Category</option>
                         <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                         <% for(let i=0;i< cartData.length;i++){ %>
-                        <option  value="<%=cartData[i]._id%>">
+                        <option value="<%=cartData[i]._id%>">
                           <%= cartData[i].name %>
                         </option>
                         <% } %>
@@ -115,54 +115,48 @@
                     </div>
                   </div>
                 </div>
-
+            
                 <div class="row">
-                  <div class="col">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label for="status" class="font-weight-bold pl-3" style="color: #000000;">Status</label>
-                      <input type="text" class="form-control form-style" id="status" name="status" placeholder="status" >
+                      <input type="text" class="form-control form-style" id="status" name="status" placeholder="status">
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                   </div>
-                  <div class="col">
+                  <div class="col-md-6">
                     <div class="form-group">
                       <label class="font-weight-bold pl-3" style="color: #000000;">Quantity</label>
-                      <input type="number" class="form-control form-style" id="quantity" name="quantity" placeholder="Enter Stock" >
+                      <input type="number" class="form-control form-style" id="quantity" name="quantity" placeholder="Enter Stock">
                       <span class="error" style="color: red;  margin-left: 15px; font-size: 10px;"></span>
                     </div>
                   </div>
                 </div>
-
+            
                 <div class="row">
-                  <div class="col">
-                      <div class="form-group">
-                          <label for="description" class="font-weight-bold pl-3" style="color: #000000;">Description</label>
-                          <div class="row">
-                              <div class="col">
-                                  <input name="description" class="form-control form-style" id="description" rows="4"></input>
-                                  <span class="error" style="color: red; margin-left: 15px; font-size: 10px;"></span>
-                              </div>
-                              <div class="col">
-                                  <div class="form-group">
-                                    <label class="upload__btn ms-3">
-                                      <p class="font-weight-bold pl-1" style="color: #000000;">Upload Images</p>
-                                      <input type="file" id="coverpic" name="image" multiple data-max_length="20" class="upload__inputfile" onchange="displaySelectedImages(this)">
-                                      <span class="error" style="color: red; margin-left: 15px; font-size: 10px;"></span>
-                                    </label>
-
-                                    
-
-                                  </div>
-                              </div>
-
-                          </div>
-                      </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label for="description" class="font-weight-bold pl-3" style="color: #000000;">Description</label>
+                      <input name="description" class="form-control form-style" id="description" rows="4"></input>
+                      <span class="error" style="color: red; margin-left: 15px; font-size: 10px;"></span>
+                    </div>
                   </div>
-              </div>
-              <div class="image-preview-container mt-2"></div>
-          
-              <div class="d-flex justify-content-center" ><button type="submit" class="btn btn-primary" >Add Product</button></div>
-          </form>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="upload__btn ms-3">
+                        <p class="font-weight-bold pl-1" style="color: #000000;">Upload Images</p>
+                        <input type="file" id="coverpic" name="image" multiple data-max_length="20" class="upload__inputfile" onchange="displaySelectedImages(this)">
+                        <span class="error" style="color: red; margin-left: 15px; font-size: 10px;"></span>
+                      </label>
+                    </div>
+                  </div>
+                </div>
+            
+                <div class="image-preview-container mt-2"></div>
+            
+                <div class="d-flex justify-content-center"><button type="submit" class="btn btn-primary">Add Product</button></div>
+              </form>
+              
             </div>
           </div>
         </div>
