--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -1,5 +1,15 @@
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
+<style>
+  .tableBody td{
+
+    background-color: rgb(248, 249, 250)!important;
+    color: black!important;
+
+    
+  }
+</style>
+
 
 <body class="g-sidenav-show bg-gray-200">
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
@@ -95,7 +105,7 @@
               </div>
               <div class="card-body px-0 pb-2">
                 <div class="table-responsive p-0">
-                  <table class="table table-dark table-striped">
+                  <table class="table ">
                     <thead>
                       <tr>
                         <th class="text-center">Name</th>
@@ -113,7 +123,7 @@
 
                       </tr>
                     </thead>
-                    <tbody style="text-align: center;">
+                    <tbody class="tableBody" style="text-align: center;">
                       <%couponItems.forEach((coupon)=>{%>
                         <% var dateFrom=new Date(coupon.validFrom); %>
                            <% var dateTo=new Date(coupon.validTo); %>
