--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -1,14 +1,14 @@
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
 <style>
-  .form-style {
+  /* .form-style {
     width: 550px;
     height: 42px;
     background-color: rgb(255, 255, 255);
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-left: 15px;
-  }
+  } */
 
   .exist_image-preview-container {
       display: flex;
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="card-body px-0 pb-2">
-              <form class="forms-sample" action="/admin/editProduct" method="post" enctype="multipart/form-data" style="background-color: #efefef;" id="productForm" >
+              <form class="forms-sample p-3" action="/admin/editProduct" method="post" enctype="multipart/form-data" style="background-color: #ffffff;" id="productForm" >
 
                 <div class="row">
                   <div class="col-md-6">
