--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -125,7 +125,7 @@
 
               </div>
               <!-- End .col-md-6 -->
-  
+           <%if(address.length > 0){%>
               <aside class="col-lg-3">
                 <div class="summary">
                   <h3 class="summary-title">Your Order</h3>
@@ -227,6 +227,7 @@
   
                 <!-- End .summary -->
               </aside>
+            <%}%>
 
 
   
