--- a/views/admin/banners.ejs
+++ b/views/admin/banners.ejs
@@ -172,6 +172,10 @@
                                     <button type="button" class="btn btn-outline-secondary btn-sm">Unlist</button>
                                 </a>
                               <%}%>
+
+                              <a href="/admin/deleteBanner?id=<%= banners._id %>" onclick="return confirm('Are you sure you want to delete this banner?');">
+                                <button type="button" id="deleteBanner" class="btn btn-danger btn-sm">Delete</button>
+                              </a>
                              
                             </div>
 
@@ -266,6 +270,9 @@
 
 
   </main>
+
+
+  
 
 
  
